--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "870b6b0d-7ea7-4c64-916a-a1db76a612da"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
