--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "user-profiles",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -25,6 +25,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "json-server": "^0.16.3",
+    "ng-http-loader": "^10.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
@@ -44,5 +45,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 12.2.1.",
+  "main": "karma.conf.js",
+  "author": "",
+  "license": "ISC"
 }
